# dfocs

./: LICENSE.txt  README.md  pyproject.toml
src/dacs/: app.py  mime.types  utils.py
src/dacs/templates/: cell.html.j2  components.html.j2  head.j2.html  html.html.j2  main.html.j2  outputs.html.j2  page.html.j2
src/dfocs/: __about__.py  __init__.py  base.py  docs.py  frames.py  tools.py  types.py
src/dfocs/data/: ignore  mime.types
src/dfocs/tests/: test_dfocs.ipynb
